# diffcast

./: README.md
backend/: .env.example  .gitignore  README.md  app.py  config.py  firebase_schema.py  pyproject.toml  requirements.txt
backend/routes/: __init__.py  api.py  main.py  pipeline.py  repos.py  sync.py  webhook.py
backend/services/: __init__.py  caption_service.py  feature_video_recorder.py  firebase_service.py  gemini_tts_service.py  gemini_video_service.py  github_client.py  media_generation_service.py  pipeline_service.py  snapshot_service.py  storage_service.py  video_stitch_service.py
backend/tests/: buse.py  gen.py  test_invoke_llm.py  test_media_generation_service.py  test_pipeline_routes.py  test_pipeline_service.py  test_webhook_pipeline.py
backend/utils/: __init__.py  invoke_llm.py  logging_config.py
docs/: FIREBASE_SCHEMA.md
frontend/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.js  page.js  page.module.css
frontend/src/app/repos/[owner]/[repo]/: page.js  page.module.css
frontend/src/app/repos/[owner]/[repo]/commit/[sha]/: CommitChat.js  CommitChat.module.css  CommitPageContent.js  CommitPageContent.module.css  page.js  page.module.css
frontend/src/components/: FeatureDemoButton.js  FeatureDemoButton.module.css  SyncCommitButton.js  SyncCommitButton.module.css  WebsiteUrlForm.js  WebsiteUrlForm.module.css
frontend/src/lib/: api.js
